fixed not centered background images.

--- a/src/components/Image.css
+++ b/src/components/Image.css
@@ -12,6 +12,7 @@
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
+  background-position: center;
 }
 
 .BackgroundImage .Image {
